tests/ui/escape.stderr
error: lifetime may not live long enough
  --> tests/ui/escape.rs:11:9
   |
 8 |     let out = local_scope(|x| {
   |                            -- return type of closure is &'2 u8
   |                            |
   |                            has type `LocalScope<'1>`
...
11 |         r1
   |         ^^ returning this value requires that `'1` must outlive `'2`
